# gh-release-test

./: CHANGELOG.md  Cargo.toml  cliff.toml  gh-release-test.json  justfile
.github/workflows/: create-gh-release.yml
src/: main.rs
