[package]
name = "gh-release-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.release]
pre-release-hook = ["git-cliff", "-t", "{{version}}", "-o", "CHANGELOG.md"]
consolidate-commits = true
pre-release-replacements = [
    { file = "src/main.rs", search = "Hello, [a-z0-9\\.-]+", replace = "Hello, v{{version}}" },
]
